--- a/.builds/nixpkgs-unstable.yml
+++ b/.builds/nixpkgs-unstable.yml
@@ -10,8 +10,8 @@ secrets:
   - 06d44cfd-6ded-45c4-9ef4-8e1433f9054e
 tasks:
   - test: |
-      nix --experimental-features 'nix-command flakes' flake check
-      nix-instantiate --eval --strict nixexprs/lib/tests.nix
+      nix --experimental-features 'nix-command flakes' flake check ./nixexprs
+      nix-instantiate --eval --strict ./nixexprs/lib/tests.nix
   - prepare: |
       cachix use aasg-nixexprs
       nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
