--- a/.builds/nixpkgs-unstable.yml
+++ b/.builds/nixpkgs-unstable.yml
@@ -9,16 +9,17 @@ sources:
 secrets:
   - 06d44cfd-6ded-45c4-9ef4-8e1433f9054e
 tasks:
-  - test: |
-      nix --experimental-features 'nix-command flakes' flake check ./nixexprs
-      nix-instantiate --eval --strict ./nixexprs/lib/tests.nix
   - prepare: |
       cachix use aasg-nixexprs
-      nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
+      printf 'experimental-features = nix-command flakes\n' >>~/.config/nix/nix.conf
+  - test: |
+      nix flake check --log-format raw ./nixexprs
+      nix-instantiate --eval --strict ./nixexprs/lib/tests.nix
   - build: |
-      nix-build --no-out-link --keep-going --keep-failed nixexprs || touch FAILED
-  - cache: |
+      nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
+      nix-build --no-out-link --keep-going --keep-failed ./nixexprs || touch FAILED
       nix path-info --all | grep -v '\.drv$' | sort >post-build-paths
+  - cache: |
       comm -13 pre-build-paths post-build-paths | cachix push aasg-nixexprs
   - finish: |
       if [[ -f FAILED ]]; then
