--- a/.builds/nixos-20.09.yml
+++ b/.builds/nixos-20.09.yml
@@ -8,13 +8,11 @@ sources:
 secrets:
   - 06d44cfd-6ded-45c4-9ef4-8e1433f9054e
 tasks:
-  - test-lib: |
-      nix-instantiate --eval --strict nixexprs/lib/tests.nix
   - prepare: |
       cachix use aasg-nixexprs
       nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
   - build: |
-      nix-build --no-out-link --keep-going --keep-failed nixexprs || touch FAILED
+      nix-build --no-out-link --keep-going --keep-failed ./nixexprs/ci.nix || touch FAILED
   - cache: |
       nix path-info --all | grep -v '\.drv$' | sort >post-build-paths
       comm -13 pre-build-paths post-build-paths | cachix push aasg-nixexprs
