--- a/.builds/nixpkgs-unstable.yml
+++ b/.builds/nixpkgs-unstable.yml
@@ -12,12 +12,11 @@ tasks:
   - prepare: |
       cachix use aasg-nixexprs
       printf 'experimental-features = nix-command flakes\n' >>~/.config/nix/nix.conf
-  - test: |
+  - check-flake: |
       nix flake check --log-format raw ./nixexprs
-      nix-instantiate --eval --strict ./nixexprs/lib/tests.nix
   - build: |
       nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
-      nix-build --no-out-link --keep-going --keep-failed ./nixexprs || touch FAILED
+      nix-build --no-out-link --keep-going --keep-failed ./nixexprs/ci.nix || touch FAILED
       nix path-info --all | grep -v '\.drv$' | sort >post-build-paths
   - cache: |
       comm -13 pre-build-paths post-build-paths | cachix push aasg-nixexprs
