--- a/.builds/nixos-20.03.yml
+++ b/.builds/nixos-20.03.yml
@@ -12,7 +12,7 @@ tasks:
       cachix use aasg-nixexprs
       nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
   - build: |
-      nix-build --no-out-link --keep-going --keep-failed ./nixexprs/ci.nix || touch FAILED
+      nix-build --no-out-link --keep-going --keep-failed --show-trace ./nixexprs/ci.nix || touch FAILED
   - cache: |
       nix path-info --all | grep -v '\.drv$' | sort >post-build-paths
       comm -13 pre-build-paths post-build-paths | cachix push aasg-nixexprs
