--- a/.builds/nixpkgs-unstable.yml
+++ b/.builds/nixpkgs-unstable.yml
@@ -16,7 +16,7 @@ tasks:
       nix flake check --log-format raw ./nixexprs
   - build: |
       nix path-info --all | grep -v '\.drv$' | sort >pre-build-paths
-      nix-build --no-out-link --keep-going --keep-failed ./nixexprs/ci.nix || touch FAILED
+      nix-build --no-out-link --keep-going --keep-failed --show-trace ./nixexprs/ci.nix || touch FAILED
       nix path-info --all | grep -v '\.drv$' | sort >post-build-paths
   - cache: |
       comm -13 pre-build-paths post-build-paths | cachix push aasg-nixexprs
