--- a/.builds/nixos-20.09.yml
+++ b/.builds/nixos-20.09.yml
@@ -1,6 +1,4 @@
-image: nixos/latest # TODO: replace with nixos/20.09 once it's available
-repositories:
-  nixos: https://nixos.org/channels/nixos-20.09
+image: nixos/20.09
 packages:
   - nixos.cachix
 sources:
